Basic setup homepage

--- a/index.html
+++ b/index.html
@@ -1,2 +1,46 @@
-<h1> Hello World </h1>
-<h2> This is the first branch ever for timo</h2>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Timo Wentink &rarr; Digital Designer</title>
+<meta charset=”UTF-8″ />
+
+<link rel="stylesheet" type="text/css" href="../css/style.css">
+
+</head>
+
+<body>
+
+  <header class="hello">
+
+    <h1> My name is Timo Wentink.
+    You can hire me when you need a
+    Digital Designer </h1>
+
+  </header>
+
+<article class="work">
+
+  <section class="work-item-left">
+      <h2> EkhartYoga</h2>
+        <h3>it’s like netflix, but for yogis</h3>
+    </section>
+
+    <section class="work-item-right">
+        <h2> EkhartYoga</h2>
+          <h3>it’s like netflix, but for yogis</h3>
+      </section>
+
+</article>
+
+<footer>
+  <footer class="footer"></footer>
+    <p class="left1"><span>Timo Wentink<br />Next line here</p>
+    <p class="left2"><br />/p>
+    <p class="left3">Center Text here<br />Next line here</p>
+    <p class="right">Center Text here<br />Next line here</p>
+</div>
+
+</footer>
+</body>
+
+</html>
