Beetje styling Grid zit al oke

--- a/index.html
+++ b/index.html
@@ -4,43 +4,63 @@
 <title>Timo Wentink &rarr; Digital Designer</title>
 <meta charset=”UTF-8″ />
 
-<link rel="stylesheet" type="text/css" href="../css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 
 <body>
+  <header class="header-grid">
 
-  <header class="hello">
-
-    <h1> My name is Timo Wentink.
-    You can hire me when you need a
-    Digital Designer </h1>
-
+      <nav>
+        <ul>
+          <li><a href="#" class="active">Hello</a></li>
+          <li><a href="#" class="">About</a></li>
+          <li><a href="#" class="">Contact</a></li>
+      </nav>
+    <div class="introduction">
+      <h1> My name is Timo Wentink <br>
+      You can hire me when you need a <br>
+      Digital Designer </h1>
+  </div>
   </header>
+    <h4> Some recent work</h4>
+      <article class="content-grid">
 
-<article class="work">
+        <section class="work-item-left">
+            <h2>Case 1</h2>
+              <h3>Subtitle goes here</h3>
+          </section>
+          <div></div>
+          <div></div>
+          <section class="work-item-right">
+            <h2>Case 1</h2>
+              <h3>Subtitle goes here</h3>
+            </section>
+            <section class="work-item-left">
+                <h2>Case 1</h2>
+                  <h3>Subtitle goes here</h3>
+              </section>
+              <div></div>
+              <div></div>
+              <section class="work-item-right">
+                <h2>Case 1</h2>
+                  <h3>Subtitle goes here</h3>
+                </section>
 
-  <section class="work-item-left">
-      <h2> EkhartYoga</h2>
-        <h3>it’s like netflix, but for yogis</h3>
-    </section>
 
-    <section class="work-item-right">
-        <h2> EkhartYoga</h2>
-          <h3>it’s like netflix, but for yogis</h3>
-      </section>
-
-</article>
-
-<footer>
-  <footer class="footer"></footer>
-    <p class="left1"><span>Timo Wentink<br />Next line here</p>
-    <p class="left2"><br />/p>
-    <p class="left3">Center Text here<br />Next line here</p>
-    <p class="right">Center Text here<br />Next line here</p>
-</div>
-
-</footer>
+    </article>
+      <div class="push"></div>
+    <footer>
+        <div class="footer-grid">
+          <div class="logo"><strong>Timo Wentink</strong> <br> Digital designer from Utrecht, the Netherlands</div>
+          <div class ="logo-mob"><strong>Timo Wentink</strong></div>
+          <div class="contact">Press &darr; if you want to<br> <a href="#">Send me an email</a></div>
+          <div class ="contact-mob"><a href="#">Send me an email</a></div>
+          <div class="linkedin">Press &darr; if you want to<br> <a href="#">Connect on Linkedin</a></div>
+          <div class ="linkedin-mob"><a href="#">Connect on Linkedin</a></div>
+          <div class="instagram">You do not want to<br> <a href="#">Follow me on Instragram</a></div>
+        </div>
+    </footer>
 </body>
 
 </html>
