--- a/index.html
+++ b/index.html
@@ -3,62 +3,89 @@
 <head>
 <title>Timo Wentink &rarr; Digital Designer</title>
 <meta charset=”UTF-8″ />
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 
 <body>
-  <header class="header-grid">
-
+  <header class="index">
       <nav>
         <ul>
-          <li><a href="#" class="active">Hello</a></li>
-          <li><a href="#" class="">About</a></li>
-          <li><a href="#" class="">Contact</a></li>
+          <li><a href="index.html" class="active" >Hello</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="mailto:timowentink@gmail.com?Subject=Hi" target="_top">Contact</a></li>
       </nav>
+        <div class="spacer"></div>
     <div class="introduction">
-      <h1> My name is Timo Wentink <br>
-      You can hire me when you need a <br>
-      Digital Designer </h1>
+      <h1> My name is Timo Wentink.
+        You can hire me when you need a <del>nicer</del></h1>
+        <h1>Digital Designer </h1>
+      <h2>
   </div>
   </header>
-    <h4> Some recent work</h4>
-      <article class="content-grid">
 
-        <section class="work-item-left">
-            <h2>Case 1</h2>
-              <h3>Subtitle goes here</h3>
+  <article class="work">
+        <section class="projects projects-grid">
+          <div class="spacer"></div>
+          <div class="description">
+            <p class="small">1) branding 2) concepting 3) user experience design 4) prototyping 5) visual design 6) web development</p>
+          </div>
+          <div class="table">
+            <div class="table-head"><h3>Recent projects</h3></div>
+            <div class="row">
+              <div class="name">Your company<div class="appendix">1, 2, 3, 4, 5, 6</div></div>
+              <div class="right">Contact me</div>
+            </div>
+            <div class="row">
+              <div class="name">Tinker Imagineers<div class="appendix">3, 4, 5</div></div>
+              <div class="right">Soon</div>
+            </div>
+            <div class="row">
+              <div class="name">EkhartYoga<div class="appendix">3, 4, 5</div></div>
+              <div class="right">Visit</div>
+            </div>
+            <div class="row">
+              <div class="name">Buddy to Buddy<div class="appendix">1, 6</div></div>
+              <div class="right"><div class="blurbutton"><a>Visit</a><div></div>
+            </div>
+          </div>
           </section>
-          <div></div>
-          <div></div>
-          <section class="work-item-right">
-            <h2>Case 1</h2>
-              <h3>Subtitle goes here</h3>
+          <section class="experience experience-grid">
+
+            <div class="table">
+              <div class="table-head"><h3>Experience</h3></div>
+              <div class="row">
+                <div class="name">Frismedia</div>
+                <div class="right">2016 &mdash; 2019</div>
+              </div>
+              <div class="row">
+                <div class="name">Clever°Franke</div>
+                <div class="right">Graduate &rarr; 2012</div>
+              </div>
+              <div class="row">
+                <div class="name">Fabrique</div>
+                <div class="right">Internship &rarr; 2011</div>
+              </div>
+              <div class="row">
+                <div class="name">Rox Media</div>
+                <div class="right">2011 &mdash; 2012 </div>
+              </div>
+            </div>
+
+              <div class="description right">From 2013 &mdash; 2016 I have been pouring hearts, tulips and rosettas into peoples coffee.</div>
+                <div class="spacer"></div>
             </section>
-            <section class="work-item-left">
-                <h2>Case 1</h2>
-                  <h3>Subtitle goes here</h3>
-              </section>
-              <div></div>
-              <div></div>
-              <section class="work-item-right">
-                <h2>Case 1</h2>
-                  <h3>Subtitle goes here</h3>
-                </section>
-
-
     </article>
       <div class="push"></div>
-    <footer>
+    <footer class="padded">
         <div class="footer-grid">
-          <div class="logo"><strong>Timo Wentink</strong> <br> Digital designer from Utrecht, the Netherlands</div>
-          <div class ="logo-mob"><strong>Timo Wentink</strong></div>
+          <div class="logo"><span class="black">Timo Wentink</span> <br> Digital designer from Utrecht, NL</div>
+          <div class ="logo-mob"><span class="black">Timo Wentink</span></div>
           <div class="contact">Press &darr; if you want to<br> <a href="#">Send me an email</a></div>
           <div class ="contact-mob"><a href="#">Send me an email</a></div>
           <div class="linkedin">Press &darr; if you want to<br> <a href="#">Connect on Linkedin</a></div>
           <div class ="linkedin-mob"><a href="#">Connect on Linkedin</a></div>
-          <div class="instagram">You do not want to<br> <a href="#">Follow me on Instragram</a></div>
         </div>
     </footer>
 </body>
