--- a/index.html
+++ b/index.html
@@ -9,41 +9,36 @@
 </head>
 
 <body>
-  <header class="index">
-      <nav>
-        <ul>
-          <li><a href="index.html" class="active" >Hello</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="mailto:timowentink@gmail.com?Subject=Hi" target="_top">Contact</a></li>
-      </nav>
-        <div class="spacer"></div>
+  <header class="on-grid">
     <div class="introduction">
       <h1> My name is Timo Wentink.
-        You can hire me when you need a <del>nicer</del></h1>
-        <h1>Digital Designer </h1>
+        You can hire me when you need a
+Digital Designer </h1>
       <h2>
   </div>
   </header>
 
   <article class="work">
-        <section class="projects projects-grid">
-          <div class="spacer"></div>
-          <div class="description">
+        <section class="projects on-grid">
+          <div class="sidenote--projects">
             <p class="small">1) branding 2) concepting 3) user experience design 4) prototyping 5) visual design 6) web development</p>
           </div>
-          <div class="table">
-            <div class="table-head"><h3>Recent projects</h3></div>
+          <div class="table table--projects">
+            <div class="table-head">Recent projects</div>
             <div class="row">
-              <div class="name">Your company<div class="appendix">1, 2, 3, 4, 5, 6</div></div>
+              <div class="name">Your project<div class="appendix">1, 2, 3, 4, 5, 6</div></div>
               <div class="right">Contact me</div>
             </div>
             <div class="row">
-              <div class="name">Tinker Imagineers<div class="appendix">3, 4, 5</div></div>
-              <div class="right">Soon</div>
+              <div class="name inactive">Tinker Imagineers<div class="appendix">3, 4, 5</div></div>
+              <div class="right"></div>
             </div>
             <div class="row">
+              <a href="#">
               <div class="name">EkhartYoga<div class="appendix">3, 4, 5</div></div>
-              <div class="right">Visit</div>
+              <div class="right arrow-right">
+              </a>
+            </div>
             </div>
             <div class="row">
               <div class="name">Buddy to Buddy<div class="appendix">1, 6</div></div>
@@ -51,10 +46,9 @@
             </div>
           </div>
           </section>
-          <section class="experience experience-grid">
-
-            <div class="table">
-              <div class="table-head"><h3>Experience</h3></div>
+          <section class="experience on-grid">
+            <div class="table table--experience">
+              <div class="table-head">Experience</div>
               <div class="row">
                 <div class="name">Frismedia</div>
                 <div class="right">2016 &mdash; 2019</div>
@@ -73,18 +67,17 @@
               </div>
             </div>
 
-              <div class="description right">From 2013 &mdash; 2016 I have been pouring hearts, tulips and rosettas into peoples coffee.</div>
-                <div class="spacer"></div>
+              <div class="sidenote--experience">From 2013 &mdash; 2016 I have been pouring hearts, tulips and rosettas into peoples coffee.</div>
             </section>
     </article>
       <div class="push"></div>
-    <footer class="padded">
+    <footer>
         <div class="footer-grid">
           <div class="logo"><span class="black">Timo Wentink</span> <br> Digital designer from Utrecht, NL</div>
           <div class ="logo-mob"><span class="black">Timo Wentink</span></div>
-          <div class="contact">Press &darr; if you want to<br> <a href="#">Send me an email</a></div>
+          <div class="contact">Press &darr; if you want to<br> <a href="about.html">Read about me</a></div>
           <div class ="contact-mob"><a href="#">Send me an email</a></div>
-          <div class="linkedin">Press &darr; if you want to<br> <a href="#">Connect on Linkedin</a></div>
+          <div class="linkedin">Press &darr; if you want to<br> <a href="mailto:timowentink@gmail.com?Subject=Hi" target="_top">Send me an email</a></div>
           <div class ="linkedin-mob"><a href="#">Connect on Linkedin</a></div>
         </div>
     </footer>
