Nieuwe stijl en setup.

--- a/index.html
+++ b/index.html
@@ -9,78 +9,155 @@
 </head>
 
 <body>
-  <header class="on-grid">
-    <div class="introduction">
-      <h1> My name is Timo Wentink.
-        You can hire me when you need a
-Digital Designer </h1>
-      <h2>
-  </div>
-  </header>
+  <div>
+    <header class="header-grid">
+          <h1 class="pagetitle-index regular">Timo Wentink — Freelance Digital Designer</h1>
+          <a href="index.html" class="logo" title="Timo Wentink"><img class="" src="img/logo.svg" alt="Timo Wentink" title="Timo Wentink — Digital Designer"></a>
+          <h2 class="contact regular"><a href="mailto:timo@timowentink.nl?subject=Hi Timo">Contact</a></h2>
+          
+          <div class="introduction"><p class="large">I craft digital experiences where I am always looking for the right balance between form and interaction.</p><a href="#" class="regular">Available for projects</a></div>
 
-  <article class="work">
-        <section class="projects on-grid">
-          <div class="sidenote--projects">
-            <p class="small">1) branding 2) concepting 3) user experience design 4) prototyping 5) visual design 6) web development</p>
-          </div>
-          <div class="table table--projects">
-            <div class="table-head">Recent projects</div>
-            <div class="row">
-              <div class="name">Your project<div class="appendix">1, 2, 3, 4, 5, 6</div></div>
-              <div class="right">Contact me</div>
-            </div>
-            <div class="row">
-              <div class="name inactive">Tinker Imagineers<div class="appendix">3, 4, 5</div></div>
-              <div class="right"></div>
-            </div>
-            <div class="row">
-              <a href="#">
-              <div class="name">EkhartYoga<div class="appendix">3, 4, 5</div></div>
-              <div class="right arrow-right">
-              </a>
-            </div>
-            </div>
-            <div class="row">
-              <div class="name">Buddy to Buddy<div class="appendix">1, 6</div></div>
-              <div class="right"><div class="blurbutton"><a>Visit</a><div></div>
-            </div>
-          </div>
-          </section>
-          <section class="experience on-grid">
-            <div class="table table--experience">
-              <div class="table-head">Experience</div>
-              <div class="row">
-                <div class="name">Frismedia</div>
-                <div class="right">2016 &mdash; 2019</div>
-              </div>
-              <div class="row">
-                <div class="name">Clever°Franke</div>
-                <div class="right">Graduate &rarr; 2012</div>
-              </div>
-              <div class="row">
-                <div class="name">Fabrique</div>
-                <div class="right">Internship &rarr; 2011</div>
-              </div>
-              <div class="row">
-                <div class="name">Rox Media</div>
-                <div class="right">2011 &mdash; 2012 </div>
-              </div>
-            </div>
+    </header>
+    <article>
+      <section class="on-grid">
+      <div class="grid-3 table projects">
+            <div class="table-head large">Selected projects</div>
 
-              <div class="sidenote--experience">From 2013 &mdash; 2016 I have been pouring hearts, tulips and rosettas into peoples coffee.</div>
-            </section>
-    </article>
-      <div class="push"></div>
-    <footer>
-        <div class="footer-grid">
-          <div class="logo"><span class="black">Timo Wentink</span> <br> Digital designer from Utrecht, NL</div>
-          <div class ="logo-mob"><span class="black">Timo Wentink</span></div>
-          <div class="contact">Press &darr; if you want to<br> <a href="about.html">Read about me</a></div>
-          <div class ="contact-mob"><a href="#">Send me an email</a></div>
-          <div class="linkedin">Press &darr; if you want to<br> <a href="mailto:timowentink@gmail.com?Subject=Hi" target="_top">Send me an email</a></div>
-          <div class ="linkedin-mob"><a href="#">Connect on Linkedin</a></div>
+            <a href="#">
+            <div class="row">
+              <div class="title">
+                <h3 class="medium">Tinker Imagineers</h3>
+                <span class="small">User Experience — Visual Design — Web & App</span>
+              </div>
+              <div class="right">
+                <span class="year small">2019</span>
+                <span class="arrow">soon</span>
+              </div>
+            </div>
+            </a>
+            <a href="#">
+            <div class="row">
+              <div class="title">
+                <h3 class="medium">EkhartYoga</h3>
+                <span class="small">User Experience — Visual Design — Web & App</span>
+              </div>
+              <div class="right">
+                <span class="year small">2018</span>
+                <span class="arrow">show case</span>
+              </div>
+            </div>
+            </a>
+            <a href="#">
+            <div class="row">
+              <div class="title">
+                <h3 class="medium">Mamaplaats</h3>
+                <span class="small">User Experience — Visual Design — Web & App</span>
+              </div>
+              <div class="right">
+                <span class="year small">2017</span>
+                <span class="arrow">show case</span>
+              </div>
+            </div>
+            </a>
+            <a href="#">
+            <div class="row">
+              <div class="title">
+                <h3 class="medium">Glorydays media</h3>
+                <span class="small">User Experience — Visual Design — Web & App</span>
+              </div>
+              <div class="right">
+                <span class="year small">2017</span>
+                <span class="arrow">view live</span>
+              </div>
+            </div>
+            </a>
         </div>
-    </footer>
+      </section>
+      <section class="who-hires-me on-grid">
+        <div class="grid-3"><span class="large">Who hires me</span></div>
+        <div class="grid-2"><p class="medium"><strong>Agencies and brands </strong><br />
+                  hire me when they need a team player who adds value throughout the entire project.
+                  A hard worker who helps the team move forward by supporting others and adding knowledge and creativity along the way.
+        </p><br /><br />
+        <p class="medium"><strong> Small businesses </strong><br />
+            use my services when they are in need of a (new) website, identity or other design work.
+        </p>
+      </div>
+      </section>
+      <section class="on-grid">
+        <div class="grid-3 table studio-experience">
+              <div class="table-head large">Studio experience</div>
+
+              <a href="#">
+              <div class="row">
+                <div class="title">
+                  <h3 class="medium">Frismedia</h3>
+
+                </div>
+                <div class="right">
+                  <span class="year small">2019</span>
+
+                </div>
+              </div>
+              </a>
+              <a href="#">
+              <div class="row">
+                <div class="title">
+                  <h3 class="medium">Clever°Franke</h3>
+
+                </div>
+                <div class="right">
+                  <span class="year small">2018</span>
+
+                </div>
+              </div>
+              </a>
+              <a href="#">
+              <div class="row">
+                <div class="title">
+                  <h3 class="medium">Fabrique Amsterdam</h3>
+
+                </div>
+                <div class="right">
+                  <span class="year small">2017</span>
+
+                </div>
+              </div>
+              </a>
+              <a href="#">
+              <div class="row">
+                <div class="title">
+                  <h3 class="medium">Rox Media</h3>
+
+                </div>
+                <div class="right">
+                  <span class="year small">2017</span>
+
+                </div>
+              </div>
+              </a>
+          </div>
+
+      </section>
+
+      <section class="what-i-do on-grid">
+        <div class="grid-3"><span class="large">What I do</span></div>
+        <div class="grid-2"><p class="medium">Websites<br />
+                                              Mobile Apps<br />
+                                              User Interfaces<br />
+                                              Concept Development<br />
+                                              Digital Strategy<br />
+                                              User Experience<br />
+                                              Product Design<br />
+                                              Design Systems<br />
+                                              Prototypes<br />
+                                              HTML/CSS<br />
+        </p>
+      </div>
+      </section>
+
+    </article>
+  </div>
 </body>
 
 </html>
