New fonts, complete frontpage

--- a/index.html
+++ b/index.html
@@ -9,71 +9,76 @@
 </head>
 
 <body>
-  <div>
+    <div class="container-fluid">
     <header class="header-grid">
-          <h1 class="pagetitle-index regular">Timo Wentink — Freelance Digital Designer</h1>
-          <a href="index.html" class="logo" title="Timo Wentink"><img class="" src="img/logo.svg" alt="Timo Wentink" title="Timo Wentink — Digital Designer"></a>
-          <h2 class="contact regular"><a href="mailto:timo@timowentink.nl?subject=Hi Timo">Contact</a></h2>
-          
-          <div class="introduction"><p class="large">I craft digital experiences where I am always looking for the right balance between form and interaction.</p><a href="#" class="regular">Available for projects</a></div>
 
+          <h1 class="pagetitle-index regular">Timo Wentink — Freelance Digital Designer</h1>
+
+          <a href="index.html" class="logo hide-on-mobile" title="Timo Wentink"><img class="" src="img/logo.svg" alt="Timo Wentink" title="Timo Wentink — Digital Designer"></a>
+          <h2 class="contact regular"><a class="link" href="mailto:timo@timowentink.nl?subject=Hi Timo">Contact</a></h2>
     </header>
+
+
     <article>
-      <section class="on-grid">
+    <section class="on-grid">
+          <div class="grid-2 introduction"><p class="large">I craft digital experiences where I am always looking for the right balance between form and interaction.</p><a href="#" class="link regular">Available for projects</a></div>
+    </section>
+  </article>
+    <article>
+      <section class="projects on-grid has-padding-vh">
       <div class="grid-3 table projects">
             <div class="table-head large">Selected projects</div>
-
-            <a href="#">
-            <div class="row">
+            <a class="fade-arrow" href="#">
+            <div class="row row-link">
               <div class="title">
                 <h3 class="medium">Tinker Imagineers</h3>
                 <span class="small">User Experience — Visual Design — Web & App</span>
               </div>
               <div class="right">
+                <span class="arrow fade">soon</span>
                 <span class="year small">2019</span>
-                <span class="arrow">soon</span>
               </div>
             </div>
             </a>
-            <a href="#">
-            <div class="row">
+            <a class="fade-arrow" href="#">
+            <div class="row row-link">
               <div class="title">
                 <h3 class="medium">EkhartYoga</h3>
                 <span class="small">User Experience — Visual Design — Web & App</span>
               </div>
               <div class="right">
-                <span class="year small">2018</span>
-                <span class="arrow">show case</span>
+                <span class="arrow fade">view case &rarr;</span>
+                <span class="year small">2019</span>
               </div>
             </div>
             </a>
-            <a href="#">
-            <div class="row">
+            <a class="fade-arrow" href="#">
+            <div class="row row-link">
               <div class="title">
                 <h3 class="medium">Mamaplaats</h3>
                 <span class="small">User Experience — Visual Design — Web & App</span>
               </div>
               <div class="right">
-                <span class="year small">2017</span>
-                <span class="arrow">show case</span>
+                <span class="arrow fade">view case &rarr;</span>
+                <span class="year small">2019</span>
               </div>
             </div>
             </a>
-            <a href="#">
-            <div class="row">
+            <a class="fade-arrow" href="#">
+            <div class="row row-link">
               <div class="title">
                 <h3 class="medium">Glorydays media</h3>
                 <span class="small">User Experience — Visual Design — Web & App</span>
               </div>
               <div class="right">
-                <span class="year small">2017</span>
-                <span class="arrow">view live</span>
+                <span class="arrow fade">visit live ↗</span>
+                <span class="year small">2019</span>
               </div>
             </div>
             </a>
         </div>
       </section>
-      <section class="who-hires-me on-grid">
+      <section class="who-hires-me on-grid has-padding-vh">
         <div class="grid-3"><span class="large">Who hires me</span></div>
         <div class="grid-2"><p class="medium"><strong>Agencies and brands </strong><br />
                   hire me when they need a team player who adds value throughout the entire project.
@@ -84,63 +89,54 @@
         </p>
       </div>
       </section>
-      <section class="on-grid">
-        <div class="grid-3 table studio-experience">
+      <section class="studio-experience on-grid has-padding-vh">
+        <div class="grid-3 table">
               <div class="table-head large">Studio experience</div>
 
-              <a href="#">
               <div class="row">
                 <div class="title">
-                  <h3 class="medium">Frismedia</h3>
-
+                  <h3 class="medium"><a class="link" href="http://www.frismedia.nl">Frismedia</a></h3>
                 </div>
                 <div class="right">
-                  <span class="year small">2019</span>
+                  <span class="year small">Designer &rsquo;16 &rarr; &rsquo;19</span>
 
                 </div>
               </div>
-              </a>
-              <a href="#">
               <div class="row">
                 <div class="title">
-                  <h3 class="medium">Clever°Franke</h3>
+                  <h3 class="medium"><a class="link" href="http://www.cleverfranke.com">Clever°Franke</a></h3>
 
                 </div>
                 <div class="right">
-                  <span class="year small">2018</span>
+                  <span class="year small">Graduate &rsquo;12</span>
 
                 </div>
               </div>
-              </a>
-              <a href="#">
               <div class="row">
                 <div class="title">
-                  <h3 class="medium">Fabrique Amsterdam</h3>
+                  <h3 class="medium"><a class="link" href="http://www.fabrique.nl">Fabrique Amsterdam</a></h3>
 
                 </div>
                 <div class="right">
-                  <span class="year small">2017</span>
+                  <span class="year small">Intern &rsquo;11</span>
 
                 </div>
               </div>
-              </a>
-              <a href="#">
               <div class="row">
                 <div class="title">
-                  <h3 class="medium">Rox Media</h3>
+                  <h3 class="medium"><a class="link" href="http://www.roxmedia.nl">Rox Media</a></h3>
 
                 </div>
                 <div class="right">
-                  <span class="year small">2017</span>
+                  <span class="year small">&rsquo;10 &rarr; &rsquo;11</span>
 
                 </div>
               </div>
-              </a>
           </div>
 
       </section>
 
-      <section class="what-i-do on-grid">
+      <section class="what-i-do on-grid has-padding-vh">
         <div class="grid-3"><span class="large">What I do</span></div>
         <div class="grid-2"><p class="medium">Websites<br />
                                               Mobile Apps<br />
@@ -157,6 +153,12 @@
       </section>
 
     </article>
+
+    <footer>
+        <div class="on-grid">
+        <div class="name-in-footer grid-3 regular">Located in Utrecht, the Netherlands</div>
+        <div class="regular"><a class="link" href="https://www.linkedin.com/in/timowentink/">Linkedin</a></div>
+    </footer>
   </div>
 </body>
 
