Cases erbij — En

--- a/index.html
+++ b/index.html
@@ -11,20 +11,17 @@
 <body>
     <div class="container-fluid">
     <header class="header-grid">
-
-          <h1 class="pagetitle-index regular">Timo Wentink — Freelance Digital Designer</h1>
-
-          <a href="index.html" class="logo hide-on-mobile" title="Timo Wentink"><img class="" src="img/logo.svg" alt="Timo Wentink" title="Timo Wentink — Digital Designer"></a>
-          <h2 class="contact regular"><a class="link" href="mailto:timo@timowentink.nl?subject=Hi Timo">Contact</a></h2>
+          <h1 class="pagetitle regular"><a class="link" href="index.html">Timo Wentink</a></h1>
+          <h1 class="pagefunction regular">Freelance Digital Designer</h1>
+          <h1 class="contact regular"><a class="link" href="mailto:timo@timowentink.nl?subject=Hi!">Contact</a></h1>
     </header>
 
 
-    <article>
+
     <section class="on-grid">
-          <div class="grid-2 introduction"><p class="large">I craft digital experiences where I am always looking for the right balance between form and interaction.</p><a href="#" class="link regular">Available for projects</a></div>
+          <div class="grid-2 introduction"><h1 class="large">I craft digital experiences where I am always looking for the right balance between form and function</h1><a href="#" class="link medium">&rarr; Available for projects</a></div>
     </section>
-  </article>
-    <article>
+
       <section class="projects on-grid has-padding-vh">
       <div class="grid-3 table projects">
             <div class="table-head large">Selected projects</div>
@@ -40,7 +37,7 @@
               </div>
             </div>
             </a>
-            <a class="fade-arrow" href="#">
+            <a class="fade-arrow" href="ekhartyoga.html">
             <div class="row row-link">
               <div class="title">
                 <h3 class="medium">EkhartYoga</h3>
@@ -52,7 +49,7 @@
               </div>
             </div>
             </a>
-            <a class="fade-arrow" href="#">
+            <a class="fade-arrow" href="mamaplaats.html">
             <div class="row row-link">
               <div class="title">
                 <h3 class="medium">Mamaplaats</h3>
@@ -64,7 +61,7 @@
               </div>
             </div>
             </a>
-            <a class="fade-arrow" href="#">
+            <a class="fade-arrow" href="https://www.glorydaysmedia.nl" target="_blank">
             <div class="row row-link">
               <div class="title">
                 <h3 class="medium">Glorydays media</h3>
@@ -85,7 +82,7 @@
                   A hard worker who helps the team move forward by supporting others and adding knowledge and creativity along the way.
         </p><br /><br />
         <p class="medium"><strong> Small businesses </strong><br />
-            use my services when they are in need of a (new) website, identity or other design work.
+          can contact me with creative challenges and use my services when they are in need of a (new) website, identity or other design and interactive work.
         </p>
       </div>
       </section>
@@ -152,14 +149,14 @@
       </div>
       </section>
 
-    </article>
 
     <footer>
         <div class="on-grid">
         <div class="name-in-footer grid-3 regular">Located in Utrecht, the Netherlands</div>
         <div class="regular"><a class="link" href="https://www.linkedin.com/in/timowentink/">Linkedin</a></div>
+          </div>
     </footer>
-  </div>
+
 </body>
 
 </html>
